# Looka-Engine-Project

./: build.gradle  gradle.properties  gradlew.bat  local.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  looka_engine.cpp
app/src/main/cpp/include/: looka_engine.h
app/src/main/cpp/openssl/arm64-v8a/include/openssl/: opensslconf.h
app/src/main/java/com/looka/engine/: BootReceiver.java  FloatingControlPanel.java  LookaEngineService.java  MainActivity.java  Mainactivity.java  NativeBridge.java
app/src/main/res/drawable/: background.xml  button_gradient_start.xml  button_gradient_stop.xml  button_outline.xml  ic_launcher.xml  minimize_button.xml
app/src/main/res/layout/: activity_main.xml  control_panel.xml  dialog_settings.xml  floating_window.xml
app/src/main/res/menu/: control_menu.xml
app/src/main/res/values/: color.xml  colors.xml  strings.xml  styles.xml
